--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -59,7 +59,7 @@ header.masthead {
   overflow: hidden;
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
-  background: linear-gradient(0deg, #d2d2d2 0%, #094fee 100%);
+  background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
@@ -83,7 +83,7 @@ header.masthead .bg-circle {
   z-index: 0;
   position: absolute;
   border-radius: 100%;
-  background: linear-gradient(0deg, #d2d2d2 0%, #094fee 100%);
+  background: linear-gradient(0deg, #ee0979 0%, #ff6a00 100%);
 }
 
 header.masthead .bg-circle-1 {
@@ -128,12 +128,12 @@ header.masthead .bg-circle-4 {
 }
 
 .bg-primary {
-  background-color: #d2d2d2 !important;
+  background-color: #ee0979 !important;
 }
 
 .btn-primary {
-  background-color: #d2d2d2;
-  border-color: #d2d2d2;
+  background-color: #ee0979;
+  border-color: #ee0979;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
@@ -146,8 +146,8 @@ header.masthead .bg-circle-4 {
 }
 
 .btn-secondary {
-  background-color: #094fee;
-  border-color: #094fee;
+  background-color: #ff6a00;
+  border-color: #ff6a00;
 }
 
 .btn-secondary:active, .btn-secondary:focus, .btn-secondary:hover {
